# rust_rest_api_test1

./: README.md
llm_v1/: Cargo.toml  README.md
llm_v1/src/: main.rs  quantized_qwen2_copy.rs
misc/: README.md
misc/src/: main.rs
org_test/: Cargo.toml  README.md
org_test/src/: main.rs  utils.rs  utils2.rs
org_test/src/fun/: func1.rs  func2.rs
warp_api/: Cargo.toml  README.md
warp_api/src/: handlers.rs  main.rs  models.rs
warp_api/src/func/: handlers.rs  models.rs  routes.rs  utils1.rs
warp_api/src/routes/: routes.rs
warp_api2/: Cargo.toml  README.md
warp_api2/src/: main.rs
warp_llm/: Cargo.toml  README.md
warp_llm/src/: main.rs
warp_llm/src/llm/: llm.rs  llm_ops.rs
